<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".Fragments.SettingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="30dp"
        android:paddingHorizontal="15dp">


        <androidx.cardview.widget.CardView
            android:id="@+id/cvinmagecard"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardBackgroundColor="@color/setting"
            app:cardCornerRadius="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:backgroundTint="@color/black"
                android:src="@drawable/ic_arrow" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvheadingsetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textSize="25sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/cvinmagecard"
            app:layout_constraintBottom_toBottomOf="@id/cvinmagecard"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnchangepass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changepassword"
            android:textAlignment="textStart"
            android:layout_marginTop="30dp"
            android:textSize="15sp"
            android:padding="20dp"
            android:fontFamily="@font/poppins_bold"
            android:background="@drawable/input_box"
            app:layout_constraintTop_toBottomOf="@id/tvheadingsetting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btncontactus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@drawable/input_box"
            android:fontFamily="@font/poppins_bold"
            android:padding="20dp"
            android:text="@string/contactus"
            android:textAlignment="textStart"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnchangepass" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnlogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/loginbutton"
            android:padding="20dp"
            android:layout_marginVertical="20dp"
            android:text="@string/logoutaccount"
            android:textColor="@color/white"
            android:textSize="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btndeleteaccount"
             />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btndeleteaccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/delete_border"
            android:padding="20dp"
            android:text="@string/deleteaccount"
            android:textColor="@color/blue"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>