<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.NewBlogFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="15dp"
            android:paddingVertical="30dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvinmagecard"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:cardBackgroundColor="@color/setting"
                app:cardCornerRadius="60dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:backgroundTint="@color/black"
                    android:src="@drawable/ic_arrow" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvheadingsetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addblog"
                android:textSize="25sp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/cvinmagecard"
                app:layout_constraintBottom_toBottomOf="@id/cvinmagecard"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="40dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvinmagecard" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_box"
                android:hint="@string/hint_title"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvname" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etname" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etdescription"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:background="@drawable/input_box"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@id/tvdescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/Uploadimage"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etdescription" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPreviewImage"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/input_box"
                android:contentDescription="Selected Image Preview"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toBottomOf="@id/tvimage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnuplaodimage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/Uploadimage"
                android:background="@drawable/recylerview"
                app:layout_constraintTop_toBottomOf="@id/ivPreviewImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnsubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/loginbutton"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnuplaodimage" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>




</FrameLayout>